fix spacing in expCertDiv

--- a/src/index.css
+++ b/src/index.css
@@ -502,7 +502,8 @@ li {
 }
 
 #expCertDiv li {
-  margin: 4px 0;
+  /* margin: 4px 0; */
+  padding: 15px;
 }
 
 #expCertDiv li:hover {
